# notedag

./: README.md
notedag-frontend/: .gitignore  package-lock.json  package.json  svelte.config.js
notedag-frontend/src/: app.css
notedag-frontend/src/lib/: index.ts  keybindings.ts  notedag.ts
notedag-frontend/src/lib/components/: Cell.svelte  CellInput.svelte  CellOutput.svelte  ChildTab.svelte  Header.svelte
notedag-frontend/src/routes/: +page.svelte
notedag-frontend/src/routes/api/create/: +server.js
notedag-frontend/src/routes/api/list/: +server.js
notedag-frontend/src/routes/api/read/: +server.js
notedag-frontend/src/routes/api/write/: +server.js
notedag-frontend/src/routes/notedags/[...filePath]/: +page.server.js  +page.svelte  +page.ts  kernel.ts
notedag-frontend/src/routes/tree/[...filePath]/: +page.server.js  +page.svelte  +page.ts
notedag-server/: Cargo.toml
notedag-server/src/: filters.rs  handlers.rs  kernel.rs  main.rs  models.rs
tests/: refactor_example.ind
